# modulo_1

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: books.csv  books.json  categories.json  users.json
src/module_1/api/: main.py
src/module_1/controllers/: auth_controller.py  book_controller.py  category_controller.py  health_controller.py  scraping_controller.py  stats_controller.py
src/module_1/middleware/: auth_middleware.py
src/module_1/models/: book.py  category.py  user.py
src/module_1/repository/: book_repository.py  category_repository.py  user_repository.py
src/module_1/script/: books_scraping.py
src/module_1/services/: auth_service.py  book_scraper_service.py  book_service.py  category_service.py  health_service.py  scraping_service.py
